# gtk-checkers

./: CMakeLists.txt  README.md  main.css
include/: CheckerPiece.h  CheckerPlayer.h  CheckerSquare.h  CheckerType.h  Checkers.h  ColorMapper.h  FinishDialog.h  GameManager.h  IBoard.h  IController.h  IFinish.h  IGame.h  IPiece.h  IPlayer.h  ISquare.h  Position.h  board.h  colors.h  controller.h
src/: CheckerPiece.cpp  CheckerPlayer.cpp  CheckerSquare.cpp  Checkers.cpp  ColorMapper.cpp  FinishDialog.cpp  GameManager.cpp  board.cpp  controller.cpp  main.cpp
